# Text-Summarizer

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  main.py  params.yaml  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.py  template.py
.github/workflows/: main.yaml
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  aws-floci-devops_learnings.ipynb  learnings.ipynb  trials.ipynb
src/textSummarizer/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/entity/: __init__.py
src/textSummarizer/logging/: __init__.py
src/textSummarizer/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
